JumpScript/tests/baselines/reference/ClassDeclaration13.errors.txt
tests/cases/compiler/ClassDeclaration13.jump(3,4): error TS2389: Function implementation name must be 'foo'.


==== tests/cases/compiler/ClassDeclaration13.jump (1 errors) ====
    class C {
       foo();
       bar() { }
       ~~~
!!! error TS2389: Function implementation name must be 'foo'.
    }